platform/policies/dev/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    environment: dev
    team: platform
    managed-by: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: processing
  labels:
    environment: dev
    team: data-engineering
    managed-by: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingestion
  labels:
    environment: dev
    team: data-engineering
    managed-by: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  labels:
    environment: dev
    team: platform
    managed-by: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-db
  labels:
    environment: dev
    team: platform
    managed-by: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: catalog
  labels:
    environment: dev
    team: platform
    managed-by: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: schema-registry
  labels:
    environment: dev
    team: platform
    managed-by: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: trino
  labels:
    environment: dev
    team: platform
    managed-by: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    environment: dev
    team: platform
    managed-by: argocd
